[package]
name = "beancount-price-fetcher"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
clap = { version = "~3.0.0-beta.1", default-features = false, features = ["suggestions", "std"] }
commodity = { version = "0.4", features = ["serde-support", "iso4217"] }
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1" }
reqwest = { version = "0.10", features = ["json"] }
rust_decimal = { version = "1.6", features = ["serde"] }
tokio = { version = "0.2", features = ["macros"] }
anyhow = "1"
chrono = "0.4"
log = "0.4"
futures = "0.3"
serde_yaml = "0.8"